fixing minor spacings in the mobile version

--- a/style.scss
+++ b/style.scss
@@ -679,6 +679,88 @@ footer {
         p {
           font-size: 1.2rem;
         }
+
+        .green {
+          top: 1.5rem;
+          left: 20%;
+        }
+
+        .testimonial {
+          margin: 6rem auto 0.5rem auto;
+          width: 95%;
+          padding: 1rem;
+          p {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+  }
+
+  .access {
+    padding: 1rem;
+    .flex {
+      .text {
+        h2 {
+          font-size: 1.6rem;
+          margin-bottom: 2rem;
+        }
+
+        p {
+          font-size: 1.2rem;
+        }
+      }
+      div {
+        margin: 0 auto;
+        form {
+          width: 100%;
+          margin: 0 auto;
+
+          input {
+            margin-top: 2rem;
+            padding: 1rem;
+            font-size: 1rem;
+          }
+
+          button {
+            margin-top: 1rem;
+            width: 100%;
+            font-size: 1rem;
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    .ft-logo {
+      width: 11rem;
+    }
+
+    ul {
+      font-size: 1.2rem;
+    }
+
+    .flex-st {
+      .informations {
+        .row {
+          p {
+            font-size: 1.2rem;
+          }
+        }
+      }
+
+      .menu {
+        li {
+          padding-top: 1.5rem;
+        }
+      }
+
+      .social {
+        li {
+          width: 30px;
+          height: 30px;
+        }
       }
     }
   }
